--- a/client/src/AboutMe.scss
+++ b/client/src/AboutMe.scss
@@ -1,6 +1,11 @@
 #about-me {  
   img {
     border-radius: 0%;
+    height: 350px;
+    width: auto;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   h1 {
